@@ -82,6 +82,13 @@ class TargetNameGeneratorTestCases(unittest.TestCase):
         self.failUnlessEqual(self.g.get_target_name(self.s),
                              "/music/Foo_Bar/IS__TOO/01-Hi_Ho.ogg")
 
+    def testLocationEscape(self):
+        self.s = SoundFile("/path/to/file with spaces")
+        self.g.set_replace_messy_chars(False)
+        self.g.set_target_suffix(".ogg")
+        self.g.set_folder("/mu sic")
+        self.failUnlessEqual(self.g.get_target_name(self.s),
+                             "/mu%20sic/file%20with%20spaces.ogg")
 
     def testURI(self):
         self.g.set_exists(self.always_exists)
